--- a/index.css
+++ b/index.css
@@ -24,19 +24,19 @@ margin: auto;
     top: 110px;
     left: 570px;
     object-fit: cover;
-    animation: cactusMove  1.2s infinite linear;
+    animation: cactusMove  1.2s infinite ease-in-out;
 }
 @keyframes cactusMove {
     0%{
         left: 570px ;
     }
     100% {
-        left: 20px;
+        left: -30px;
     }
 
 }
 .jump {
-    animation: dinoMove  .3s  linear;
+    animation: dinoMove  .4s  linear;
 }
 @keyframes dinoMove {
     0%{
